# Projects

./: index.html
portal-it/: .gitignore  README.md  index.html  links.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json
portal-it/formatos/: README.md
portal-it/manuales/: README.md
portal-it/src/: App.tsx  main.tsx  styles.css
portal-it/src-tauri/: Cargo.toml  tauri.conf.json
portal-it/src-tauri/migrations/: 001_init.sql
portal-it/src-tauri/src/: db.rs  main.rs  models.rs
portal-it/src/components/: DashboardCard.tsx  GlobalSearch.tsx
portal-it/src/data/: mockLinks.ts
portal-it/src/hooks/: useBookmarks.ts
portal-it/src/pages/: Dashboard.tsx  Formats.tsx  Manuals.tsx  SwitchManager.tsx  Tasks.tsx
