[package]
name = "portal-it"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["dialog-open", "dialog-save", "shell-open", "updater", "path-all"] }
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
